Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current repository (svn)
====================================

 o #13842 moved some classes in contrib packages

 o #13825 Bugfix for 'no meat found'
   This could lead to a looping callback message and subscriber not receiving msgs anymore.
   Removed misleading log.error in same context
   Reported by Marshall Shapiro 2005-10-10

 o #13824 Queue persistence entries are now recovered even if new data is available at the back

 o #13815 removed Global and made java logging to Execute

 o #13805 Added applet ping method, extended example applet and docu

 o #13786 fixed bug on DbWatcher (TimestampChangeDetector) when number of digits changed it 
   previously did not detect change.
  
 o #13764 Added constructors with no global to ClientProperties (other are deprecated)

 o #13753 removed Global from EncodableData

 o #13750 added flag copyOnMove to file poller (allows archiving on remotely mounted file systems)

 o #13726,#13727 Removed jclark-omquery-xpath engine dependeny from xmlBlaster core for JDK >= 1.5

 o #137187,#13718 Ported to use native XML parser when running with >= JDK 1.5
   But still uses crimson for JDK 1.2,1.3 and 1.4
   See
    http://www.xmlBlaster.org/FAQ.html#xml-parser
    http://www.xmlblaster.org/xmlBlaster/doc/client-api/org/xmlBlaster/util/XmlNotPortable.html
   - xmlBlaster.properties has changed, please use the new template
   - engine.service.rdbms requirements will only run with JDK 1.5 from now on
   Please remove those lines in your xmlBlaster.properties:
     javax.xml.parsers.SAXParserFactory=org.apache.crimson.jaxp.SAXParserFactoryImpl
     javax.xml.parsers.DocumentBuilderFactory=org.apache.crimson.jaxp.DocumentBuilderFactoryImpl

 o #13713,#13714 C++ Fixed progress listener registration in offline mode

 o #13710 fixed an empty type attr in EncodableData is now a String. Parsing of 