@@ -3,6 +3,7 @@ The "#99999" numbers are Subversion revision numbers.
 
 Changes for current repository (svn)
 ====================================
+ o #13845 Added JMX methods to clear or remove messages from callback queue
 
  o #13842 moved some classes in contrib packages
 
